--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -20,7 +20,7 @@
 FROM    centos:7
 LABEL   version="9.5.0" \
         description="XDMoD bundle containing database and web server" \
-        maintainer="frey@udel.edu"
+        maintainer="carlos@encs.concordia.ca"
 
 #
 # Install tools, libraries:
@@ -29,7 +29,8 @@ RUN     yum -y update && \
         yum -y install  epel-release && \
         yum -y install  sudo wget gmp-devel cronie logrotate \
                         coreutils shadow-utils tar xz bzip2 gzip zip jq \
-                        libreoffice chromium-headless librsvg2-tools
+                        libreoffice chromium-headless librsvg2-tools \
+                        openssh-server openssh-clients 
 RUN     set -o pipefail && echo "root:${ROOT_PASSWORD}" | chpasswd
 
 #
@@ -50,6 +51,11 @@ RUN     yum -y install  mariadb-server mariadb
 RUN     yum -y install https://github.com/ubccr/xdmod/releases/download/v9.5.0/xdmod-9.5.0-1.0.el7.noarch.rpm
 
 #
+# Install Munge:
+#
+RUN     yum -y install munge munge-libs munge-devel
+
+#
 # XDMoD uses an Apache virtual host on port 8080:
 #
 EXPOSE  8080/tcp
@@ -64,6 +70,11 @@ RUN     mkdir --parents --mode=0755 /var/lib/XDMoD-ingest-queue/error
 #
 # Command to execute when container is started:
 #
+RUN     groupadd -g 966 munge
+RUN     useradd  -m -c "MUNGE Uid 'N' Gid Emporium" -d /var/lib/munge -u 966 -g munge  -s /sbin/nologin munge
+RUN     chown -R munge: /etc/munge/ /var/log/munge/
+RUN     chmod 0700 /etc/munge/ /var/log/munge/
+RUN     /usr/sbin/munged
 COPY    --chown=0:0 XDMoD-start /usr/sbin/XDMoD-start
 RUN     chmod 0755 /usr/sbin/XDMoD-start
 CMD     /usr/sbin/XDMoD-start
